@@ -21,18 +21,16 @@ import static java.util.Collections.list;
 import java.net.Inet6Address;
 import java.net.InetAddress;
 import java.net.SocketException;
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.StringJoiner;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
-import org.jspecify.annotations.NullMarked;
 import org.jspecify.annotations.Nullable;
 
-@NullMarked
 public class NetworkInterface {
   private static final Logger LOG = Logger.getLogger(NetworkInterface.class.getName());
 
@@ -54,7 +52,7 @@ public class NetworkInterface {
   }
 
   NetworkInterface(String name, InetAddress... inetAddresses) {
-    this(name, Arrays.asList(inetAddresses));
+    this(name, List.of(inetAddresses));
     this.isLoopback = isLoopBackFromINetAddresses(this.inetAddresses);
   }
 
