@@ -17,7 +17,10 @@
 
 package org.openqa.selenium.support.ui;
 
-import java.util.*;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.StringTokenizer;
 import java.util.stream.Collectors;
 import org.openqa.selenium.By;
 import org.openqa.selenium.NoSuchElementException;
@@ -71,8 +74,8 @@ public class Select implements ISelect, WrapsElement {
    *     Return false if visibility is set to 'hidden', display is 'none', or opacity is 0 or 0.0.
    */
   private boolean hasCssPropertyAndVisible(WebElement webElement) {
-    List<String> cssValueCandidates = Arrays.asList(new String[] {"hidden", "none", "0", "0.0"});
-    String[] cssPropertyCandidates = new String[] {"visibility", "display", "opacity"};
+    Set<String> cssValueCandidates = Set.of("hidden", "none", "0", "0.0");
+    List<String> cssPropertyCandidates = List.of("visibility", "display", "opacity");
 
     for (String property : cssPropertyCandidates) {
       String cssValue = webElement.getCssValue(property);
@@ -122,50 +125,7 @@ public class Select implements ISelect, WrapsElement {
    */
   @Override
   public void selectByVisibleText(String text) {
-    assertSelectIsEnabled();
-
-    // try to find the option via XPATH ...
-    List<WebElement> options =
-        element.findElements(
-            By.xpath(".//option[normalize-space(.) = " + Quotes.escape(text) + "]"));
-
-    for (WebElement option : options) {
-      setSelected(option, true);
-      if (!isMultiple()) {
-        return;
-      }
-    }
-
-    boolean matched = !options.isEmpty();
-    if (!matched && text.contains(" ")) {
-      String subStringWithoutSpace = getLongestSubstringWithoutSpace(text);
-      List<WebElement> candidates;
-      if ("".equals(subStringWithoutSpace)) {
-        // hmm, text is either empty or contains only spaces - get all options ...
-        candidates = element.findElements(By.tagName("option"));
-      } else {
-        // get candidates via XPATH ...
-        candidates =
-            element.findElements(
-                By.xpath(".//option[contains(., " + Quotes.escape(subStringWithoutSpace) + ")]"));
-      }
-
-      String trimmed = text.trim();
-
-      for (WebElement option : candidates) {
-        if (trimmed.equals(option.getText().trim())) {
-          setSelected(option, true);
-          if (!isMultiple()) {
-            return;
-          }
-          matched = true;
-        }
-      }
-    }
-
-    if (!matched) {
-      throw new NoSuchElementException("Cannot locate option with text: " + text);
-    }
+    selectByVisibleText(text, false);
   }
 
   /**
@@ -188,53 +148,7 @@ public class Select implements ISelect, WrapsElement {
    */
   @Override
   public void selectByContainsVisibleText(String text) {
-    assertSelectIsEnabled();
-    assertSelectIsVisible();
-
-    // try to find the option via XPATH ...
-    List<WebElement> options =
-        element.findElements(
-            By.xpath(".//option[normalize-space(.) = " + Quotes.escape(text) + "]"));
-
-    for (WebElement option : options) {
-      if (!hasCssPropertyAndVisible(option))
-        throw new NoSuchElementException("Invisible option with text: " + text);
-      setSelected(option, true);
-      if (!isMultiple()) {
-        return;
-      }
-    }
-
-    boolean matched = !options.isEmpty();
-    if (!matched) {
-      String searchText = text.contains(" ") ? getLongestSubstringWithoutSpace(text) : text;
-
-      List<WebElement> candidates;
-      if (searchText.isEmpty()) {
-        candidates = element.findElements(By.tagName("option"));
-      } else {
-        candidates =
-            element.findElements(
-                By.xpath(".//option[contains(., " + Quotes.escape(searchText) + ")]"));
-      }
-
-      String trimmed = text.trim();
-      for (WebElement option : candidates) {
-        if (option.getText().contains(trimmed)) {
-          if (!hasCssPropertyAndVisible(option))
-            throw new NoSuchElementException("Invisible option with text: " + text);
-          setSelected(option, true);
-          if (!isMultiple()) {
-            return;
-          }
-          matched = true;
-        }
-      }
-    }
-
-    if (!matched) {
-      throw new NoSuchElementException("Cannot locate option with text: " + text);
-    }
+    selectByVisibleText(text, true);
   }
 
   private String getLongestSubstringWithoutSpace(String s) {
@@ -417,6 +331,73 @@ public class Select implements ISelect, WrapsElement {
     assertOptionIsEnabled(option, select);
     if (option.isSelected() != select) {
       option.click();
+    }
+  }
+
+  /**
+   * @param text The visible text to match against. It can be a partial match of the option if
+   *     isPartialMatch = true
+   * @param isPartialMatch If true a partial match on the Options list will be performed, otherwise
+   *     exact match
+   * @throws NoSuchElementException If no matching option elements are found or matching options are
+   *     hidden
+   */
+  private void selectByVisibleText(String text, boolean isPartialMatch) {
+    assertSelectIsEnabled();
+    assertSelectIsVisible();
+
+    // try to find the option via XPATH ...
+    List<WebElement> options =
+        element.findElements(
+            By.xpath(".//option[normalize-space(.) = " + Quotes.escape(text) + "]"));
+
+    for (WebElement option : options) {
+      if (!hasCssPropertyAndVisible(option))
+        throw new NoSuchElementException("Invisible option with text: " + text);
+
+      setSelected(option, true);
+
+      if (!isMultiple()) {
+        return;
+      }
+    }
+
+    boolean matched = !options.isEmpty();
+    if (!matched) {
+      String searchText = text.contains(" ") ? getLongestSubstringWithoutSpace(text) : text;
+
+      List<WebElement> candidates;
+      if (searchText.isEmpty()) {
+        candidates = element.findElements(By.tagName("option"));
+      } else {
+        candidates =
+            element.findElements(
+                By.xpath(".//option[contains(., " + Quotes.escape(searchText) + ")]"));
+      }
+
+      String trimmed = text.trim();
+      for (WebElement option : candidates) {
+        boolean isMatchedOptionFound =
+            isPartialMatch
+                ? option.getText().contains(trimmed)
+                : option.getText().trim().equals(trimmed);
+
+        if (isMatchedOptionFound) {
+          if (!hasCssPropertyAndVisible(option))
+            throw new NoSuchElementException("Invisible option with text: " + text);
+
+          setSelected(option, true);
+
+          if (!isMultiple()) {
+            return;
+          }
+          matched = true;
+        }
+      }
+    }
+
+    if (!matched) {
+      throw new NoSuchElementException("Cannot locate option with text: " + text);
     }
   }
 
