@@ -17,16 +17,13 @@
 
 package org.openqa.selenium.grid.config;
 
+import static java.lang.System.getProperty;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 
 import com.beust.jcommander.JCommander;
 import com.beust.jcommander.Parameter;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.ImmutableCapabilities;
@@ -37,40 +34,39 @@ class ConfigTest {
   void ensureFirstConfigValueIsChosen() {
     Config config =
         new CompoundConfig(
-            new MapConfig(ImmutableMap.of("section", ImmutableMap.of("option", "foo"))),
-            new MapConfig(ImmutableMap.of("section", ImmutableMap.of("option", "bar"))));
+            new MapConfig(Map.of("section", Map.of("option", "foo"))),
+            new MapConfig(Map.of("section", Map.of("option", "bar"))));
 
-    assertEquals("foo", config.get("section", "option").get());
+    assertThat(config.get("section", "option").get()).isEqualTo("foo");
   }
 
   @Test
   void shouldReturnEmptyIfConfigValueIsMissing() {
-    Config config = new MapConfig(ImmutableMap.of());
+    Config config = new MapConfig();
 
-    assertFalse(config.get("section", "option").isPresent());
+    assertThat(config.get("section", "option").isPresent()).isFalse();
   }
 
   @Test
   void shouldReadSystemProperties() {
     Config config =
         new CompoundConfig(
-            new MapConfig(ImmutableMap.of()),
-            new ConcatenatingConfig("", '.', System.getProperties()));
+            new MapConfig(), new ConcatenatingConfig("", '.', System.getProperties()));
 
-    assertEquals(System.getProperty("user.home"), config.get("user", "home").get());
+    assertThat(config.get("user", "home").get()).isEqualTo(getProperty("user.home"));
   }
 
   @Test
   void shouldReturnAllMatchingOptions() {
     Config config =
         new CompoundConfig(
-            new MapConfig(ImmutableMap.of("section", ImmutableMap.of("option", "foo"))),
-            new MapConfig(ImmutableMap.of("section", ImmutableMap.of("cake", "fish"))),
-            new MapConfig(ImmutableMap.of("section", ImmutableMap.of("option", "bar"))));
+            new MapConfig(Map.of("section", Map.of("option", "foo"))),
+            new MapConfig(Map.of("section", Map.of("cake", "fish"))),
+            new MapConfig(Map.of("section", Map.of("option", "bar"))));
 
-    assertEquals(Optional.empty(), config.getAll("cheese", "brie"));
-    assertEquals(Optional.of(ImmutableList.of("fish")), config.getAll("section", "cake"));
-    assertEquals(Optional.of(ImmutableList.of("foo", "bar")), config.getAll("section", "option"));
+    assertThat(config.getAll("cheese", "brie")).isEmpty();
+    assertThat(config.getAll("section", "cake")).contains(List.of("fish"));
+    assertThat(config.getAll("section", "option")).contains(List.of("foo", "bar"));
   }
 
   @Test
@@ -91,16 +87,16 @@ class ConfigTest {
 
     Config config = new AnnotatedConfig(settable);
 
-    assertEquals(Optional.of(settable.field), config.getAll("food", "kinds"));
+    assertThat(config.getAll("food", "kinds")).contains(settable.field);
   }
 
   @Test
   void compoundConfigsCanProperlyInstantiateClassesReferringToOptionsInOtherConfigs() {
     Config config =
         new CompoundConfig(
-            new MapConfig(ImmutableMap.of("cheese", ImmutableMap.of("taste", "delicious"))),
-            new MapConfig(ImmutableMap.of("cheese", ImmutableMap.of("name", "cheddar"))),
-            new MapConfig(ImmutableMap.of("cheese", ImmutableMap.of("scent", "smelly"))));
+            new MapConfig(Map.of("cheese", Map.of("taste", "delicious"))),
+            new MapConfig(Map.of("cheese", Map.of("name", "cheddar"))),
+            new MapConfig(Map.of("cheese", Map.of("scent", "smelly"))));
 
     String name = config.getClass("foo", "bar", String.class, ReadsConfig.class.getName());
 
@@ -110,8 +106,7 @@ class ConfigTest {
   @Test
   void shouldBeAbleToGetAClassWithDefaultConstructor() {
     Config config =
-        new MapConfig(
-            ImmutableMap.of("foo", ImmutableMap.of("caps", ImmutableCapabilities.class.getName())));
+        new MapConfig(Map.of("foo", Map.of("caps", ImmutableCapabilities.class.getName())));
 
     Capabilities caps =
         config.getClass("foo", "caps", Capabilities.class, ImmutableCapabilities.class.getName());
