@@ -26,6 +26,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
+import static org.openqa.selenium.By.cssSelector;
 import static org.openqa.selenium.support.ui.ExpectedConditions.and;
 import static org.openqa.selenium.support.ui.ExpectedConditions.attributeContains;
 import static org.openqa.selenium.support.ui.ExpectedConditions.attributeToBe;
@@ -57,7 +58,6 @@ import com.google.common.collect.Sets;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
@@ -766,16 +766,15 @@ class ExpectedConditionsTest {
   void waitingForSpecificNumberOfElementsMoreThanSpecifiedPositive() {
     String testSelector = "testSelector";
     when(mockDriver.findElements(By.cssSelector(testSelector)))
-        .thenReturn(Arrays.asList(mockElement, mockElement));
-    assertThat(wait.until(numberOfElementsToBeMoreThan(By.cssSelector(testSelector), 1)).size())
-        .isEqualTo(2);
+        .thenReturn(List.of(mockElement, mockElement));
+    assertThat(wait.until(numberOfElementsToBeMoreThan(cssSelector(testSelector), 1))).hasSize(2);
   }
 
   @Test
   void waitingForSpecificNumberOfElementsLessThanSpecifiedWhenNumberIsEqual() {
     String testSelector = "testSelector";
     when(mockDriver.findElements(By.cssSelector(testSelector)))
-        .thenReturn(Arrays.asList(mockElement, mockElement));
+        .thenReturn(List.of(mockElement, mockElement));
     assertThatExceptionOfType(TimeoutException.class)
         .isThrownBy(
             () -> wait.until(numberOfElementsToBeLessThan(By.cssSelector(testSelector), 2)));
@@ -786,17 +785,15 @@ class ExpectedConditionsTest {
     String testSelector = "testSelector";
     when(mockDriver.findElements(By.cssSelector(testSelector)))
         .thenReturn(singletonList(mockElement));
-    assertThat(wait.until(numberOfElementsToBeLessThan(By.cssSelector(testSelector), 2)).size())
-        .isEqualTo(1);
+    assertThat(wait.until(numberOfElementsToBeLessThan(cssSelector(testSelector), 2))).hasSize(1);
   }
 
   @Test
   void waitingForSpecificNumberOfElementsPositive() {
     String testSelector = "testSelector";
     when(mockDriver.findElements(By.cssSelector(testSelector)))
-        .thenReturn(Arrays.asList(mockElement, mockElement));
-    assertThat(wait.until(numberOfElementsToBe(By.cssSelector(testSelector), 2)).size())
-        .isEqualTo(2);
+        .thenReturn(List.of(mockElement, mockElement));
+    assertThat(wait.until(numberOfElementsToBe(cssSelector(testSelector), 2))).hasSize(2);
   }
 
   @Test
